fix: return animation  and fix flicker take card animation. more style offline player

--- a/public/boards/players-board.scss
+++ b/public/boards/players-board.scss
@@ -20,6 +20,16 @@ tk-player-board {
 
   &.offline{
     filter: brightness(0.5) grayscale(1);
+    &::after{
+      content: 'offline';
+      color: black;
+      position: absolute;
+      font-size: 3em;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -webkit-text-stroke: 1px white;
+    }
   }
 
   .player-name, .player-slogan {
